--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "6.1.2",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-community/datetimepicker": "^6.1.2",
+    "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "antd": "^4.21.3",
     "date-fns": "^2.28.0",
     "expo": "~45.0.0",
     "expo-constants": "~13.1.1",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -30,8 +32,10 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-select-dropdown": "^1.13.0",
+    "react-native-simple-time-picker": "^1.3.11",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "rsuite": "^5.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
