--- a/package.json
+++ b/package.json
@@ -25,17 +25,21 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-menu": "^2.0.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-multi-selectbox": "^1.5.0",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-simple-time-picker": "^1.3.11",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "rsuite": "^5.15.1"
+    "rsuite": "^5.15.1",
+    "expo-location": "~14.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
