--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "antd": "^4.21.3",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "expo": "~45.0.0",
     "expo-constants": "~13.1.1",
+    "expo-location": "~14.2.2",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.3",
@@ -38,8 +40,7 @@
     "react-native-simple-time-picker": "^1.3.11",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "rsuite": "^5.15.1",
-    "expo-location": "~14.2.2"
+    "rsuite": "^5.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
